k8s-manifests/koha-cms-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koha-cms-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koha-cms-backend
  template:
    metadata:
      labels:
        app: koha-cms-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/rklsubha2017-cloud/admin-cms-docker/koha-cms-backend:72031b424b2cd65d4d8dd5a233881f7b33d19219
        ports:
        - containerPort: 8000
        # This injects all DB credentials and JWT/Vault keys automatically
---
apiVersion: v1
kind: Service
metadata:
  name: koha-cms-backend-service
spec:
  selector:
    app: koha-cms-backend
  ports:
  - port: 8000
    targetPort: 8000
